--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "deploy": "gh-pages -d dist"
   },
   "license": "MIT",
+  "dependencies": {
+    "nano": "github:lupomontero/nano"
+  },
   "devDependencies": {
     "@babel/core": "^7.5.4",
     "@babel/preset-env": "^7.5.4",
@@ -19,7 +22,6 @@
     "eslint-plugin-import": "^2.18.0",
     "gh-pages": "^2.0.1",
     "jest": "^24.8.0",
-    "nano": "github:lupomontero/nano",
     "parcel-bundler": "^1.12.3"
   }
 }
